# F28PL

./: README.md
f28pl-2020-21-ocaml-coursework-dubai/: README.md  f28pl-ocaml-coursework.opam
f28pl-2020-21-ocaml-coursework-dubai/1-complex-numbers/_build/: log
f28pl-2020-21-ocaml-coursework-dubai/1-complex-numbers/lib/: dune
f28pl-2020-21-ocaml-coursework-dubai/1-complex-numbers/test/: dune
f28pl-2020-21-ocaml-coursework-dubai/2-sequence-arithmetic/_build/: log
f28pl-2020-21-ocaml-coursework-dubai/2-sequence-arithmetic/lib/: SequenceArithmetic.ml  dune
f28pl-2020-21-ocaml-coursework-dubai/2-sequence-arithmetic/test/: dune
f28pl-2020-21-ocaml-coursework-dubai/3-matrices/lib/: Matrices.ml  dune
f28pl-2020-21-ocaml-coursework-dubai/3-matrices/test/: dune
f28pl-2020-21-ocaml-coursework-dubai/4-essay-question/lib/: Essay.ml  dune
f28pl-2020-21-ocaml-coursework-dubai/4-essay-question/test/: dune
f28pl-2020-21-ocaml-coursework-dubai/5-isomorphic-functions/_build/: log
f28pl-2020-21-ocaml-coursework-dubai/5-isomorphic-functions/lib/: Functions.ml  dune
f28pl-2020-21-ocaml-coursework-dubai/5-isomorphic-functions/test/: dune
f28pl-2020-21-ocaml-coursework-dubai/6-Church-numerals/_build/: log
f28pl-2020-21-ocaml-coursework-dubai/6-Church-numerals/lib/: ChurchNumerals.ml  dune
f28pl-2020-21-ocaml-coursework-dubai/6-Church-numerals/test/: ChurchNumeralsTests.ml  dune
f28pl-2020-21-ocaml-coursework-dubai/7-sums/lib/: Sums.ml  dune
f28pl-2020-21-ocaml-coursework-dubai/7-sums/test/: dune
f28pl-2020-21-ocaml-coursework-dubai/_build/: log
(+27 files in other folders)
